# whisper.cpp

./: Makefile  whisper.cpp  whisper.h
examples/: CMakeLists.txt  audio-stdin.cpp  audio-stdin.h  common-audioasync.h  common-grpc.cpp  common-grpc.h  common-gstreamer.cpp  common-gstreamer.h  common-sdl.cpp  common-sdl.h  transcription.proto
examples/stream/: stream.cpp
examples/stream-stdin/: stream-stdin.cpp
examples/stream.grpc/: CMakeLists.txt  common-grpc.cpp  common-grpc.h  stream.cpp  transcription.grpc.pb.cc  transcription.grpc.pb.h  transcription.pb.cc  transcription.pb.h  transcription.proto
examples/stream.grpc/python-test-clients/: audio_sender.py
examples/stream.gst/: CMakeLists.txt  README.md  stream.cpp  stupidStreamFileWatcher.sh
